rename input to instance